Adicionada a tabela dos produtos, sujeito a impostos e a bastante mudança de design grafico