@@ -2,12 +2,11 @@ package com.grupo6.projetoptda;
 
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
-import javafx.scene.Node;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.stage.Stage;
-
 import java.io.IOException;
+import java.util.Objects;
 
 
 public class MainController {
@@ -18,14 +17,7 @@ public class MainController {
     }
 
     @FXML
-    public void onGerirMesasClick() {
-        System.out.println("Gerir Mesas clicada!");
-    }
-
-    @FXML
-    public void onFecharCaixaClick() {
-        System.out.println("Fechar Caixa clicada!");
-    }
+    public void onFecharCaixaClick() {System.out.println("Fechar Caixa clicada!"); }
 
     @FXML
     public void onOperacoesCaixaClick() {
@@ -36,10 +28,10 @@ public class MainController {
     public void onNovaVendaClick() {
         try {
             // Carregar o novo layout (Nova Venda)
-            Parent novaVendaRoot = FXMLLoader.load(getClass().getResource("/com/grupo6/projetoptda/NovaVendaPanel.fxml"));
+            Parent novaVendaRoot = FXMLLoader.load(Objects.requireNonNull(getClass().getResource("/com/grupo6/projetoptda/NovaVendaPanel.fxml")));
 
             // Obter a cena atual e substituí-la pelo novo conteúdo
-            Scene scene = ((Node) (Stage.getWindows().get(0).getScene().getRoot())).getScene();
+            Scene scene = Stage.getWindows().getFirst().getScene().getRoot().getScene();
             scene.setRoot(novaVendaRoot);
 
         } catch (IOException e) {
